sparql/scanner/scanner.go

//line scanner.rl:1
package scanner

import "log"

const (
	ILLEGAL = iota

	ADD
	SUB
	MUL
	QUO

	EQL    // =
	LSS    // <
	GTR    // >
	ASSIGN // =
	NOT    // !

	NEQ      // !=
	LEQ      // <=
	GEQ      // >=

	LAND  // &&
	LOR   // ||

	LPAREN // (
	LBRACK // [
	LBRACE // {
	COMMA  // ,
	PERIOD // .

	RPAREN    // )
	RBRACK    // ]
	RBRACE    // }
	SEMICOLON // ;

	TYPE     // ^^

	IDENT
	A

	ANON

	// Keywords
	ASC
	ASK
	BASE
	BY
	CONSTRUCT
	DESC
	DESCRIBE
	DISTINCT
	FILTER
	FROM
	GRAPH
	LIMIT
	NAMED
	OFFSET
	OPTIONAL
	ORDER
	PREFIX
	REDUCED
	SELECT
	UNION
	WHERE

	BLANK_NODE_LABEL
	DECIMAL
	DECIMAL_NEGATIVE
	DECIMAL_POSITIVE
	DOUBLE
	DOUBLE_NEGATIVE
	DOUBLE_POSITIVE
	INTEGER
	INTEGER_NEGATIVE
	INTEGER_POSITIVE
	IRI_REF
	LANGTAG
	NIL
	PNAME_LN
	PNAME_NS
	STRING_LITERAL1
	STRING_LITERAL2
	STRING_LITERAL_LONG1
	STRING_LITERAL_LONG2
	VAR1
	VAR2

	EOF
)


//line scanner.go:96
const sparql_scanner_start int = 171
const sparql_scanner_first_final int = 171
const sparql_scanner_error int = 0

const sparql_scanner_en_main int = 171


//line scanner.rl:218



type Token struct {
	Value string
	Kind  int
}

func Scan(data string) []Token {
	var cs, ts, te, act, p int
	pe := len(data)
	eof := -1

	var tokens []Token
	emit := func (kind int) {
		tokens=append(tokens, Token{data[ts:te], kind})
	}

	
//line scanner.go:124
	{
	cs = sparql_scanner_start
	ts = 0
	te = 0
	act = 0
	}

//line scanner.rl:237
	
//line scanner.go:134
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 171:
		goto st_case_171
	case 0:
		goto st_case_0
	case 172:
		goto st_case_172
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 173:
		goto st_case_173
	case 174:
		goto st_case_174
	case 175:
		goto st_case_175
	case 3:
		goto st_case_3
	case 176:
		goto st_case_176
	case 177:
		goto st_case_177
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 178:
		goto st_case_178
	case 9:
		goto st_case_9
	case 179:
		goto st_case_179
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 180:
		goto st_case_180
	case 181:
		goto st_case_181
	case 182:
		goto st_case_182
	case 13:
		goto st_case_13
	case 183:
		goto st_case_183
	case 184:
		goto st_case_184
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 185:
		goto st_case_185
	case 19:
		goto st_case_19
	case 186:
		goto st_case_186
	case 20:
		goto st_case_20
	case 187:
		goto st_case_187
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 188:
		goto st_case_188
	case 189:
		goto st_case_189
	case 190:
		goto st_case_190
	case 23:
		goto st_case_23
	case 191:
		goto st_case_191
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 192:
		goto st_case_192
	case 193:
		goto st_case_193
	case 194:
		goto st_case_194
	case 195:
		goto st_case_195
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 196:
		goto st_case_196
	case 197:
		goto st_case_197
	case 198:
		goto st_case_198
	case 199:
		goto st_case_199
	case 28:
		goto st_case_28
	case 200:
		goto st_case_200
	case 29:
		goto st_case_29
	case 201:
		goto st_case_201
	case 202:
		goto st_case_202
	case 30:
		goto st_case_30
	case 203:
		goto st_case_203
	case 31:
		goto st_case_31
	case 204:
		goto st_case_204
	case 32:
		goto st_case_32
	case 205:
		goto st_case_205
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 206:
		goto st_case_206
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 207:
		goto st_case_207
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 208:
		goto st_case_208
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	case 161:
		goto st_case_161
	case 162:
		goto st_case_162
	case 163:
		goto st_case_163
	case 164:
		goto st_case_164
	case 209:
		goto st_case_209
	case 165:
		goto st_case_165
	case 166:
		goto st_case_166
	case 167:
		goto st_case_167
	case 168:
		goto st_case_168
	case 210:
		goto st_case_210
	case 169:
		goto st_case_169
	case 211:
		goto st_case_211
	case 170:
		goto st_case_170
	}
	goto st_out
tr3:
//line NONE:1
	switch act {
	case 0:
	{{goto st0 }}
	case 8:
	{p = (te) - 1
 emit(INTEGER) }
	case 9:
	{p = (te) - 1
 emit(DECIMAL) }
	case 11:
	{p = (te) - 1
 emit(INTEGER_POSITIVE) }
	case 12:
	{p = (te) - 1
 emit(DECIMAL_POSITIVE) }
	case 14:
	{p = (te) - 1
 emit(INTEGER_NEGATIVE) }
	case 15:
	{p = (te) - 1
 emit(DECIMAL_NEGATIVE) }
	case 17:
	{p = (te) - 1
 emit(STRING_LITERAL1) }
	case 18:
	{p = (te) - 1
 emit(STRING_LITERAL2) }
	case 25:
	{p = (te) - 1
 emit(ASC) }
	case 26:
	{p = (te) - 1
 emit(ASK) }
	case 27:
	{p = (te) - 1
 emit(BASE) }
	case 28:
	{p = (te) - 1
 emit(IDENT) }
	case 29:
	{p = (te) - 1
 emit(BY) }
	case 30:
	{p = (te) - 1
 emit(CONSTRUCT) }
	case 31:
	{p = (te) - 1
 emit(IDENT) }
	case 32:
	{p = (te) - 1
 emit(DESC) }
	case 33:
	{p = (te) - 1
 emit(DESCRIBE) }
	case 34:
	{p = (te) - 1
 emit(DISTINCT) }
	case 35:
	{p = (te) - 1
 emit(FILTER) }
	case 36:
	{p = (te) - 1
 emit(FROM) }
	case 37:
	{p = (te) - 1
 emit(GRAPH) }
	case 38:
	{p = (te) - 1
 emit(IDENT) }
	case 39:
	{p = (te) - 1
 emit(IDENT) }
	case 40:
	{p = (te) - 1
 emit(LIMIT) }
	case 41:
	{p = (te) - 1
 emit(NAMED) }
	case 42:
	{p = (te) - 1
 emit(OFFSET) }
	case 43:
	{p = (te) - 1
 emit(OPTIONAL) }
	case 44:
	{p = (te) - 1
 emit(PREFIX) }
	case 45:
	{p = (te) - 1
 emit(REDUCED) }
	case 46:
	{p = (te) - 1
 emit(IDENT) }
	case 47:
	{p = (te) - 1
 emit(SELECT) }
	case 48:
	{p = (te) - 1
 emit(IDENT) }
	case 49:
	{p = (te) - 1
 emit(UNION) }
	case 50:
	{p = (te) - 1
 emit(WHERE) }
	case 51:
	{p = (te) - 1
 emit(ORDER) }
	case 52:
	{p = (te) - 1
 emit(A) }
	case 53:
	{p = (te) - 1
 emit(IDENT) }
	case 54:
	{p = (te) - 1
 emit(IDENT) }
	case 55:
	{p = (te) - 1
 emit(IDENT) }
	case 56:
	{p = (te) - 1
 emit(IDENT) }
	case 57:
	{p = (te) - 1
 emit(IDENT) }
	case 58:
	{p = (te) - 1
 emit(IDENT) }
	case 59:
	{p = (te) - 1
 emit(IDENT) }
	case 72:
	{p = (te) - 1
 emit(LSS) }
	case 73:
	{p = (te) - 1
 emit(LEQ) }
	}
	
	goto st171
tr5:
//line scanner.rl:147
p = (te) - 1
{ emit(STRING_LITERAL2) }
	goto st171
tr13:
//line scanner.rl:149
te = p+1
{ emit(STRING_LITERAL_LONG2) }
	goto st171
tr16:
//line scanner.rl:194
te = p+1
{ emit(LAND) }
	goto st171
tr20:
//line scanner.rl:146
p = (te) - 1
{ emit(STRING_LITERAL1) }
	goto st171
tr28:
//line scanner.rl:148
te = p+1
{ emit(STRING_LITERAL_LONG1) }
	goto st171
tr30:
//line scanner.rl:195
p = (te) - 1
{ emit(LPAREN) }
	goto st171
tr32:
//line scanner.rl:150
te = p+1
{ emit(NIL) }
	goto st171
tr33:
//line scanner.rl:198
p = (te) - 1
{ emit(ADD) }
	goto st171
tr37:
//line scanner.rl:200
p = (te) - 1
{ emit(SUB) }
	goto st171
tr43:
//line scanner.rl:131
p = (te) - 1
{ emit(PNAME_LN) }
	goto st171
tr47:
//line scanner.rl:130
te = p+1
{ emit(IRI_REF) }
	goto st171
tr50:
//line scanner.rl:136
p = (te) - 1
{ emit(LANGTAG) }
	goto st171
tr85:
//line scanner.rl:163
p = (te) - 1
{ emit(DESC) }
	goto st171
tr134:
//line scanner.rl:169
p = (te) - 1
{ emit(IDENT) }
	goto st171
tr203:
//line scanner.rl:212
p = (te) - 1
{ emit(LBRACK) }
	goto st171
tr205:
//line scanner.rl:151
te = p+1
{ emit(ANON) }
	goto st171
tr206:
//line scanner.rl:214
te = p+1
{ emit(TYPE) }
	goto st171
tr209:
//line scanner.rl:133
p = (te) - 1
{ emit(BLANK_NODE_LABEL) }
	goto st171
tr211:
//line scanner.rl:210
te = p+1
{ emit(LOR) }
	goto st171
tr212:
//line scanner.rl:152
te = p+1

	goto st171
tr220:
//line scanner.rl:196
te = p+1
{ emit(RPAREN) }
	goto st171
tr221:
//line scanner.rl:197
te = p+1
{ emit(MUL) }
	goto st171
tr223:
//line scanner.rl:199
te = p+1
{ emit(COMMA) }
	goto st171
tr226:
//line scanner.rl:202
te = p+1
{ emit(QUO) }
	goto st171
tr228:
//line scanner.rl:203
te = p+1
{ emit(SEMICOLON) }
	goto st171
tr230:
//line scanner.rl:206
te = p+1
{ emit(EQL) }
	goto st171
tr251:
//line scanner.rl:213
te = p+1
{ emit(RBRACK) }
	goto st171
tr255:
//line scanner.rl:209
te = p+1
{ emit(LBRACE) }
	goto st171
tr257:
//line scanner.rl:211
te = p+1
{ emit(RBRACE) }
	goto st171
tr258:
//line scanner.rl:192
te = p
p--
{ emit(NOT) }
	goto st171
tr259:
//line scanner.rl:193
te = p+1
{ emit(NEQ) }
	goto st171
tr260:
//line scanner.rl:147
te = p
p--
{ emit(STRING_LITERAL2) }
	goto st171
tr262:
//line scanner.rl:154
te = p
p--

	goto st171
tr263:
//line scanner.rl:135
te = p
p--
{ emit(VAR2) }
	goto st171
tr264:
//line scanner.rl:146
te = p
p--
{ emit(STRING_LITERAL1) }
	goto st171
tr266:
//line scanner.rl:195
te = p
p--
{ emit(LPAREN) }
	goto st171
tr267:
//line scanner.rl:198
te = p
p--
{ emit(ADD) }
	goto st171
tr270:
//line scanner.rl:141
te = p
p--
{ emit(DECIMAL_POSITIVE) }
	goto st171
tr272:
//line scanner.rl:142
te = p
p--
{ emit(DOUBLE_POSITIVE) }
	goto st171
tr273:
//line scanner.rl:140
te = p
p--
{ emit(INTEGER_POSITIVE) }
	goto st171
tr274:
//line scanner.rl:200
te = p
p--
{ emit(SUB) }
	goto st171
tr277:
//line scanner.rl:144
te = p
p--
{ emit(DECIMAL_NEGATIVE) }
	goto st171
tr279:
//line scanner.rl:145
te = p
p--
{ emit(DOUBLE_NEGATIVE) }
	goto st171
tr280:
//line scanner.rl:143
te = p
p--
{ emit(INTEGER_NEGATIVE) }
	goto st171
tr281:
//line scanner.rl:201
te = p
p--
{ emit(PERIOD) }
	goto st171
tr283:
//line scanner.rl:138
te = p
p--
{ emit(DECIMAL) }
	goto st171
tr285:
//line scanner.rl:139
te = p
p--
{ emit(DOUBLE) }
	goto st171
tr286:
//line scanner.rl:137
te = p
p--
{ emit(INTEGER) }
	goto st171
tr287:
//line scanner.rl:132
te = p
p--
{ emit(PNAME_NS) }
	goto st171
tr288:
//line scanner.rl:131
te = p
p--
{ emit(PNAME_LN) }
	goto st171
tr289:
//line scanner.rl:204
te = p
p--
{ emit(LSS) }
	goto st171
tr291:
//line scanner.rl:205
te = p
p--
{ emit(LEQ) }
	goto st171
tr292:
//line scanner.rl:207
te = p
p--
{ emit(GTR) }
	goto st171
tr293:
//line scanner.rl:208
te = p+1
{ emit(GEQ) }
	goto st171
tr294:
//line scanner.rl:134
te = p
p--
{ emit(VAR1) }
	goto st171
tr295:
//line scanner.rl:136
te = p
p--
{ emit(LANGTAG) }
	goto st171
tr297:
//line scanner.rl:163
te = p
p--
{ emit(DESC) }
	goto st171
tr299:
//line scanner.rl:169
te = p
p--
{ emit(IDENT) }
	goto st171
tr301:
//line scanner.rl:212
te = p
p--
{ emit(LBRACK) }
	goto st171
tr302:
//line scanner.rl:133
te = p
p--
{ emit(BLANK_NODE_LABEL) }
	goto st171
tr303:
//line scanner.rl:183
te = p
p--
{ emit(A) }
	goto st171
	st171:
//line NONE:1
ts = 0

//line NONE:1
act = 0

		if p++; p == pe {
			goto _test_eof171
		}
	st_case_171:
//line NONE:1
ts = p

//line scanner.go:1058
		switch data[p] {
		case 13:
			goto tr212
		case 32:
			goto tr212
		case 33:
			goto st172
		case 34:
			goto st1
		case 35:
			goto st178
		case 36:
			goto st9
		case 38:
			goto st10
		case 39:
			goto st11
		case 40:
			goto tr219
		case 41:
			goto tr220
		case 42:
			goto tr221
		case 43:
			goto tr222
		case 44:
			goto tr223
		case 45:
			goto tr224
		case 46:
			goto st194
		case 47:
			goto tr226
		case 58:
			goto st198
		case 59:
			goto tr228
		case 60:
			goto tr229
		case 61:
			goto tr230
		case 62:
			goto st202
		case 63:
			goto st30
		case 64:
			goto st31
		case 65:
			goto st33
		case 66:
			goto st37
		case 67:
			goto st43
		case 68:
			goto st51
		case 70:
			goto st69
		case 71:
			goto st79
		case 73:
			goto st83
		case 76:
			goto st99
		case 78:
			goto st111
		case 79:
			goto st115
		case 80:
			goto st129
		case 82:
			goto st134
		case 83:
			goto st142
		case 84:
			goto st154
		case 85:
			goto st157
		case 87:
			goto st161
		case 91:
			goto tr250
		case 93:
			goto tr251
		case 94:
			goto st166
		case 95:
			goto st167
		case 97:
			goto tr254
		case 98:
			goto st37
		case 99:
			goto st43
		case 100:
			goto st51
		case 102:
			goto st69
		case 103:
			goto st79
		case 105:
			goto st83
		case 108:
			goto st99
		case 110:
			goto st111
		case 111:
			goto st115
		case 112:
			goto st129
		case 114:
			goto st134
		case 115:
			goto st142
		case 116:
			goto st154
		case 117:
			goto st157
		case 119:
			goto st161
		case 123:
			goto tr255
		case 124:
			goto st170
		case 125:
			goto tr257
		}
		switch {
		case data[p] < 11:
			switch {
			case data[p] > 8:
				if 9 <= data[p] && data[p] <= 10 {
					goto tr212
				}
			default:
				goto st0
			}
		case data[p] > 37:
			switch {
			case data[p] < 92:
				if 48 <= data[p] && data[p] <= 57 {
					goto tr227
				}
			case data[p] > 96:
				if 126 <= data[p] && data[p] <= 127 {
					goto st0
				}
			default:
				goto st0
			}
		default:
			goto st0
		}
		goto st34
st_case_0:
	st0:
		cs = 0
		goto _out
	st172:
		if p++; p == pe {
			goto _test_eof172
		}
	st_case_172:
		if data[p] == 61 {
			goto tr259
		}
		goto tr258
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 34:
			goto tr1
		case 50:
			goto st0
		case 53:
			goto st0
		case 65:
			goto st0
		case 120:
			goto st0
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto st0
		}
		goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 34:
			goto tr4
		case 50:
			goto tr3
		case 53:
			goto tr3
		case 65:
			goto tr3
		case 120:
			goto tr3
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto tr3
		}
		goto st2
tr4:
//line NONE:1
te = p+1

//line scanner.rl:147
act = 18;
	goto st173
	st173:
		if p++; p == pe {
			goto _test_eof173
		}
	st_case_173:
//line scanner.go:1279
		switch data[p] {
		case 34:
			goto tr4
		case 50:
			goto tr260
		case 53:
			goto tr260
		case 65:
			goto tr260
		case 120:
			goto tr260
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto tr260
		}
		goto st2
tr1:
//line NONE:1
te = p+1

//line scanner.rl:147
act = 18;
	goto st174
	st174:
		if p++; p == pe {
			goto _test_eof174
		}
	st_case_174:
//line scanner.go:1308
		switch data[p] {
		case 34:
			goto tr14
		case 50:
			goto tr260
		case 53:
			goto tr260
		case 65:
			goto tr260
		case 120:
			goto tr260
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto tr260
		}
		goto st2
tr14:
//line NONE:1
te = p+1

//line scanner.rl:147
act = 18;
	goto st175
	st175:
		if p++; p == pe {
			goto _test_eof175
		}
	st_case_175:
//line scanner.go:1337
		switch data[p] {
		case 34:
			goto tr7
		case 50:
			goto st4
		case 53:
			goto st4
		case 65:
			goto st4
		case 92:
			goto st8
		case 120:
			goto st4
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto st4
		}
		goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 34:
			goto tr7
		case 50:
			goto st4
		case 53:
			goto st4
		case 65:
			goto st4
		case 92:
			goto st8
		case 120:
			goto st4
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto st4
		}
		goto st3
tr7:
//line NONE:1
te = p+1

//line scanner.rl:147
act = 18;
	goto st176
	st176:
		if p++; p == pe {
			goto _test_eof176
		}
	st_case_176:
//line scanner.go:1391
		switch data[p] {
		case 34:
			goto tr261
		case 50:
			goto st4
		case 53:
			goto st4
		case 65:
			goto st4
		case 92:
			goto st8
		case 120:
			goto st4
		}
		if 67 <= data[p] && data[p] <= 68 {
			goto st4
		}
		goto st3
tr261:
//line NONE:1
te = p+1
